--- a/style.css
+++ b/style.css
@@ -9,45 +9,57 @@ body {
   text-align: center;
   overflow: hidden;
   margin: 0;
+  background-image: linear-gradient(rgba(255, 255, 255, 0.699), rgba(255, 255, 255, 0.281)),url(https://images.unsplash.com/photo-1690395661896-fa30cfca7b71?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position-y: bottom;
+  background-color: rgba(240, 248, 255, 0.349);
 }
 
 h3 {
   margin-bottom: 0;
   text-align: center;
+  font-size: 40px;
 }
-
 small {
   display: block;
   margin-bottom: 20px;
   text-align: center;
 }
-
 .fa-heart {
   color: red;
 }
-
 .loveMe {
-  height: 440px;
-  width: 300px;
-  background: url('https://images.unsplash.com/photo-1504215680853-026ed2a45def?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80')
+  height: 600px;
+  width: 500px;
+  background: url('https://images.unsplash.com/photo-1716738698804-364f60dc1bd0?q=80&w=1382&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')
     no-repeat center center/cover;
   margin: auto;
   cursor: pointer;
   max-width: 100%;
   position: relative;
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  box-shadow: 0 34px 18px rgba(0, 0, 0, 0.445), 0 10px 18px rgba(0, 0, 0,0.445);
   overflow: hidden;
 }
-
 .loveMe .fa-heart {
   position: absolute;
   animation: grow 0.6s linear;
   transform: translate(-50%, -50%) scale(0);
 }
-
 @keyframes grow {
-  to {
+  0% {
+    transform: translate(-50%, -50%) scale(0);
+    opacity: 1;
+    box-shadow: 0 0 10px rgba(255, 0, 0, 0.3);
+  }
+  70% {
+    transform: translate(-50%, -50%) scale(1.5);
+    opacity: 0.8;
+    box-shadow: 0 0 20px rgba(255, 0, 0, 0.6);
+  }
+  100% {
     transform: translate(-50%, -50%) scale(10);
     opacity: 0;
+    box-shadow: 0 0 10px rgba(255, 0, 0, 0.3);
   }
 }
